--- a/cacla/cacla_torch.ipynb
+++ b/cacla/cacla_torch.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " 2024-01-19 16:15:34 GMT\n",
+      " 2024-01-20 14:28:12 GMT\n",
       "OK.\n"
      ]
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
     "        elif self.steps_beyond_terminated is None:\n",
     "            # Pole just fell!\n",
     "            self.steps_beyond_terminated = 0\n",
-    "            reward = 1.0\n",
+    "            reward = -1.0\n",
     "        else:\n",
     "            if self.steps_beyond_terminated == 0:\n",
     "                logger.warn(\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -443,246 +443,190 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "======= run = 1 / 20 =========\n",
-      "it = 0 | reward 17.9\n",
-      "it = 200 | reward 13.6\n",
-      "it = 400 | reward 13.9\n",
-      "it = 800 | reward 12.6\n",
-      "it = 1600 | reward 13.8\n",
-      "it = 3200 | reward 13.2\n",
-      "it = 6400 | reward 26.0\n",
-      "it = 12800 | reward 18.1\n",
-      "it = 25600 | reward 17.5\n",
-      "it = 51200 | reward 47.2\n",
-      "it = 102400 | reward 27.8\n",
+      "======= run = 1 / 20 =========\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-20 14:28:14.125956: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-01-20 14:28:16.217776: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-01-20 14:28:22.053876: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/cv2/../../lib64:/Infos/lmd/2021/licence/ue/LU3IN031-2022fev/2kO6/bin/gcc/lib64::/usr/local/cuda-11.6/lib64:/usr/local/cuda-12.2/lib64:/opt/gurobi801/linux64/lib\n",
+      "2024-01-20 14:28:22.057567: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /users/nfs/Enseignants/piwowarski/venv/deepdac/lib/python3.9/site-packages/cv2/../../lib64:/Infos/lmd/2021/licence/ue/LU3IN031-2022fev/2kO6/bin/gcc/lib64::/usr/local/cuda-11.6/lib64:/usr/local/cuda-12.2/lib64:/opt/gurobi801/linux64/lib\n",
+      "2024-01-20 14:28:22.057634: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it = 0 | reward 23.4\n",
+      "it = 200 | reward 44.3\n",
+      "it = 400 | reward 39.1\n",
+      "it = 800 | reward 21.8\n",
+      "it = 1600 | reward 29.2\n",
+      "it = 3200 | reward 42.5\n",
+      "it = 6400 | reward 41.0\n",
+      "it = 12800 | reward 44.6\n",
+      "it = 25600 | reward 27.4\n",
+      "it = 51200 | reward 120.2\n",
+      "it = 102400 | reward 61.0\n",
       "======= run = 2 / 20 =========\n",
-      "it = 0 | reward 25.6\n",
-      "it = 200 | reward 30.0\n",
-      "it = 400 | reward 26.3\n",
-      "it = 800 | reward 32.7\n",
-      "it = 1600 | reward 28.7\n",
-      "it = 3200 | reward 39.0\n",
-      "it = 6400 | reward 31.4\n",
-      "it = 12800 | reward 21.3\n",
-      "it = 25600 | reward 22.8\n",
-      "it = 51200 | reward 28.5\n",
-      "it = 102400 | reward 44.5\n",
-      "======= run = 3 / 20 =========\n",
-      "it = 0 | reward 16.7\n",
-      "it = 200 | reward 15.4\n",
-      "it = 400 | reward 12.6\n",
-      "it = 800 | reward 14.6\n",
-      "it = 1600 | reward 15.6\n",
-      "it = 3200 | reward 12.8\n",
-      "it = 6400 | reward 17.1\n",
-      "it = 12800 | reward 28.7\n",
-      "it = 25600 | reward 35.9\n",
-      "it = 51200 | reward 23.9\n",
-      "it = 102400 | reward 22.7\n",
-      "======= run = 4 / 20 =========\n",
-      "it = 0 | reward 35.2\n",
-      "it = 200 | reward 19.2\n",
-      "it = 400 | reward 19.7\n",
-      "it = 800 | reward 24.2\n",
-      "it = 1600 | reward 45.5\n",
-      "it = 3200 | reward 22.8\n",
-      "it = 6400 | reward 36.7\n",
-      "it = 12800 | reward 31.3\n",
-      "it = 25600 | reward 24.1\n",
-      "it = 51200 | reward 32.6\n",
-      "it = 102400 | reward 21.7\n",
-      "======= run = 5 / 20 =========\n",
-      "it = 0 | reward 15.7\n",
-      "it = 200 | reward 28.7\n",
-      "it = 400 | reward 29.0\n",
-      "it = 800 | reward 25.1\n",
-      "it = 1600 | reward 21.5\n",
-      "it = 3200 | reward 26.4\n",
-      "it = 6400 | reward 17.1\n",
-      "it = 12800 | reward 26.2\n",
-      "it = 25600 | reward 39.2\n",
-      "it = 51200 | reward 51.7\n",
-      "it = 102400 | reward 20.7\n",
-      "======= run = 6 / 20 =========\n",
-      "it = 0 | reward 15.5\n",
-      "it = 200 | reward 12.5\n",
-      "it = 400 | reward 13.0\n",
-      "it = 800 | reward 12.6\n",
-      "it = 1600 | reward 16.9\n",
-      "it = 3200 | reward 27.7\n",
-      "it = 6400 | reward 20.1\n",
-      "it = 12800 | reward 15.1\n",
-      "it = 25600 | reward 18.6\n",
-      "it = 51200 | reward 34.1\n",
-      "it = 102400 | reward 37.7\n",
-      "======= run = 7 / 20 =========\n",
-      "it = 0 | reward 40.5\n",
-      "it = 200 | reward 39.3\n",
-      "it = 400 | reward 23.4\n",
-      "it = 800 | reward 21.4\n",
-      "it = 1600 | reward 24.0\n",
-      "it = 3200 | reward 30.7\n",
-      "it = 6400 | reward 20.8\n",
-      "it = 12800 | reward 27.6\n",
-      "it = 25600 | reward 50.5\n",
-      "it = 51200 | reward 25.4\n",
-      "it = 102400 | reward 44.9\n",
-      "======= run = 8 / 20 =========\n",
-      "it = 0 | reward 26.1\n",
-      "it = 200 | reward 33.1\n",
-      "it = 400 | reward 30.1\n",
-      "it = 800 | reward 32.1\n",
-      "it = 1600 | reward 41.7\n",
-      "it = 3200 | reward 30.7\n",
-      "it = 6400 | reward 38.5\n",
-      "it = 12800 | reward 29.1\n",
-      "it = 25600 | reward 28.1\n",
-      "it = 51200 | reward 39.3\n",
-      "it = 102400 | reward 34.5\n",
-      "======= run = 9 / 20 =========\n",
-      "it = 0 | reward 15.4\n",
-      "it = 200 | reward 14.2\n",
-      "it = 400 | reward 12.8\n",
-      "it = 800 | reward 19.1\n",
-      "it = 1600 | reward 39.7\n",
-      "it = 3200 | reward 33.4\n",
-      "it = 6400 | reward 18.9\n",
-      "it = 12800 | reward 25.2\n",
-      "it = 25600 | reward 21.0\n",
-      "it = 51200 | reward 28.1\n",
-      "it = 102400 | reward 37.3\n",
-      "======= run = 10 / 20 =========\n",
-      "it = 0 | reward 29.5\n",
-      "it = 200 | reward 39.3\n",
-      "it = 400 | reward 24.8\n",
-      "it = 800 | reward 46.5\n",
-      "it = 1600 | reward 17.6\n",
-      "it = 3200 | reward 26.1\n",
-      "it = 6400 | reward 48.2\n",
-      "it = 12800 | reward 41.8\n",
-      "it = 25600 | reward 22.0\n",
-      "it = 51200 | reward 20.6\n",
-      "it = 102400 | reward 33.1\n",
-      "======= run = 11 / 20 =========\n",
-      "it = 0 | reward 19.3\n",
-      "it = 200 | reward 22.3\n",
-      "it = 400 | reward 26.0\n",
-      "it = 800 | reward 19.1\n",
-      "it = 1600 | reward 32.6\n",
-      "it = 3200 | reward 37.1\n",
-      "it = 6400 | reward 30.8\n",
-      "it = 12800 | reward 37.4\n",
-      "it = 25600 | reward 23.3\n",
-      "it = 51200 | reward 23.6\n",
-      "it = 102400 | reward 27.2\n",
-      "======= run = 12 / 20 =========\n",
-      "it = 0 | reward 46.0\n",
-      "it = 200 | reward 27.7\n",
-      "it = 400 | reward 18.3\n",
-      "it = 800 | reward 14.0\n",
-      "it = 1600 | reward 13.4\n",
-      "it = 3200 | reward 15.9\n",
-      "it = 6400 | reward 21.4\n",
-      "it = 12800 | reward 35.8\n",
-      "it = 25600 | reward 22.2\n",
-      "it = 51200 | reward 24.3\n",
-      "it = 102400 | reward 36.0\n",
-      "======= run = 13 / 20 =========\n",
-      "it = 0 | reward 26.1\n",
-      "it = 200 | reward 18.9\n",
-      "it = 400 | reward 18.3\n",
-      "it = 800 | reward 17.6\n",
-      "it = 1600 | reward 19.1\n",
-      "it = 3200 | reward 41.0\n",
-      "it = 6400 | reward 25.9\n",
-      "it = 12800 | reward 30.2\n",
-      "it = 25600 | reward 22.5\n",
-      "it = 51200 | reward 34.3\n",
-      "it = 102400 | reward 39.3\n",
-      "======= run = 14 / 20 =========\n",
-      "it = 0 | reward 21.3\n",
-      "it = 200 | reward 13.6\n",
-      "it = 400 | reward 12.8\n",
-      "it = 800 | reward 13.3\n",
-      "it = 1600 | reward 14.4\n",
-      "it = 3200 | reward 17.2\n",
-      "it = 6400 | reward 18.3\n",
-      "it = 12800 | reward 35.7\n",
-      "it = 25600 | reward 22.8\n",
-      "it = 51200 | reward 19.6\n",
-      "it = 102400 | reward 21.1\n",
-      "======= run = 15 / 20 =========\n",
-      "it = 0 | reward 23.1\n",
-      "it = 200 | reward 26.0\n",
-      "it = 400 | reward 16.4\n",
-      "it = 800 | reward 21.7\n",
-      "it = 1600 | reward 22.8\n",
-      "it = 3200 | reward 29.4\n",
-      "it = 6400 | reward 37.1\n",
-      "it = 12800 | reward 27.2\n",
-      "it = 25600 | reward 24.0\n",
-      "it = 51200 | reward 55.0\n",
-      "it = 102400 | reward 33.7\n",
-      "======= run = 16 / 20 =========\n",
-      "it = 0 | reward 45.7\n",
-      "it = 200 | reward 20.2\n",
-      "it = 400 | reward 14.5\n",
-      "it = 800 | reward 14.9\n",
-      "it = 1600 | reward 15.7\n",
-      "it = 3200 | reward 45.1\n",
-      "it = 6400 | reward 30.3\n",
-      "it = 12800 | reward 41.2\n",
-      "it = 25600 | reward 44.6\n",
-      "it = 51200 | reward 42.0\n",
-      "it = 102400 | reward 40.5\n",
-      "======= run = 17 / 20 =========\n",
-      "it = 0 | reward 34.3\n",
-      "it = 200 | reward 27.1\n",
-      "it = 400 | reward 24.1\n",
-      "it = 800 | reward 34.8\n",
-      "it = 1600 | reward 20.4\n",
-      "it = 3200 | reward 17.6\n",
-      "it = 6400 | reward 24.1\n",
-      "it = 12800 | reward 20.8\n",
-      "it = 25600 | reward 45.3\n",
-      "it = 51200 | reward 28.8\n",
-      "it = 102400 | reward 20.8\n",
-      "======= run = 18 / 20 =========\n",
       "it = 0 | reward 19.0\n",
-      "it = 200 | reward 19.4\n",
-      "it = 400 | reward 18.3\n",
-      "it = 800 | reward 20.2\n",
-      "it = 1600 | reward 46.2\n",
-      "it = 3200 | reward 41.6\n",
-      "it = 6400 | reward 18.8\n",
-      "it = 12800 | reward 20.2\n",
-      "it = 25600 | reward 49.3\n",
+      "it = 200 | reward 14.5\n",
+      "it = 400 | reward 20.0\n",
+      "it = 800 | reward 23.8\n",
+      "it = 1600 | reward 55.0\n",
+      "it = 3200 | reward 52.4\n",
+      "it = 6400 | reward 35.8\n",
+      "it = 12800 | reward 36.0\n",
+      "it = 25600 | reward 111.8\n",
+      "it = 51200 | reward 23.4\n",
+      "it = 102400 | reward 23.2\n",
+      "======= run = 3 / 20 =========\n",
+      "it = 0 | reward 13.0\n",
+      "it = 200 | reward 15.8\n",
+      "it = 400 | reward 17.1\n",
+      "it = 800 | reward 21.0\n",
+      "it = 1600 | reward 20.5\n",
+      "it = 3200 | reward 42.6\n",
+      "it = 6400 | reward 32.5\n",
+      "it = 12800 | reward 59.4\n",
+      "it = 25600 | reward 36.7\n",
+      "it = 51200 | reward 22.0\n",
+      "it = 102400 | reward 21.8\n",
+      "======= run = 4 / 20 =========\n",
+      "it = 0 | reward 21.3\n",
+      "it = 200 | reward 23.5\n",
+      "it = 400 | reward 36.4\n",
+      "it = 800 | reward 40.9\n",
+      "it = 1600 | reward 28.2\n",
+      "it = 3200 | reward 47.9\n",
+      "it = 6400 | reward 29.5\n",
+      "it = 12800 | reward 127.2\n",
+      "it = 25600 | reward 32.5\n",
+      "it = 51200 | reward 67.4\n",
+      "it = 102400 | reward 29.6\n",
+      "======= run = 5 / 20 =========\n",
+      "it = 0 | reward 16.1\n",
+      "it = 200 | reward 11.6\n",
+      "it = 400 | reward 13.9\n",
+      "it = 800 | reward 19.0\n",
+      "it = 1600 | reward 32.2\n",
+      "it = 3200 | reward 43.0\n",
+      "it = 6400 | reward 46.3\n",
+      "it = 12800 | reward 48.0\n",
+      "it = 25600 | reward 20.9\n",
+      "it = 51200 | reward 59.8\n",
+      "it = 102400 | reward 22.9\n",
+      "======= run = 6 / 20 =========\n",
+      "it = 0 | reward 30.8\n",
+      "it = 200 | reward 37.7\n",
+      "it = 400 | reward 55.3\n",
+      "it = 800 | reward 48.8\n",
+      "it = 1600 | reward 37.4\n",
+      "it = 3200 | reward 55.9\n",
+      "it = 6400 | reward 22.0\n",
+      "it = 12800 | reward 22.2\n",
+      "it = 25600 | reward 44.2\n",
+      "it = 51200 | reward 32.8\n",
+      "it = 102400 | reward 25.6\n",
+      "======= run = 7 / 20 =========\n",
+      "it = 0 | reward 14.5\n",
+      "it = 200 | reward 14.4\n",
+      "it = 400 | reward 15.4\n",
+      "it = 800 | reward 19.2\n",
+      "it = 1600 | reward 39.3\n",
+      "it = 3200 | reward 40.0\n",
+      "it = 6400 | reward 56.8\n",
+      "it = 12800 | reward 79.9\n",
+      "it = 25600 | reward 20.1\n",
       "it = 51200 | reward 24.2\n",
-      "it = 102400 | reward 31.9\n",
-      "======= run = 19 / 20 =========\n",
-      "it = 0 | reward 24.3\n",
-      "it = 200 | reward 20.2\n",
-      "it = 400 | reward 16.1\n",
-      "it = 800 | reward 14.5\n",
-      "it = 1600 | reward 44.8\n",
-      "it = 3200 | reward 16.8\n",
-      "it = 6400 | reward 26.4\n",
-      "it = 12800 | reward 21.5\n",
-      "it = 25600 | reward 15.5\n",
-      "it = 51200 | reward 25.2\n",
-      "it = 102400 | reward 53.3\n",
-      "======= run = 20 / 20 =========\n",
-      "it = 0 | reward 36.7\n",
-      "it = 200 | reward 41.9\n",
-      "it = 400 | reward 27.0\n",
-      "it = 800 | reward 17.9\n",
-      "it = 1600 | reward 22.4\n",
-      "it = 3200 | reward 10.6\n",
-      "it = 6400 | reward 9.2\n",
-      "it = 12800 | reward 9.2\n",
-      "it = 25600 | reward 9.5\n",
-      "it = 51200 | reward 9.2\n",
-      "it = 102400 | reward 36.7\n"
+      "it = 102400 | reward 57.0\n",
+      "======= run = 8 / 20 =========\n",
+      "it = 0 | reward 19.6\n",
+      "it = 200 | reward 12.4\n",
+      "it = 400 | reward 13.3\n",
+      "it = 800 | reward 21.4\n",
+      "it = 1600 | reward 42.4\n",
+      "it = 3200 | reward 50.4\n",
+      "it = 6400 | reward 26.3\n",
+      "it = 12800 | reward 101.6\n",
+      "it = 25600 | reward 18.6\n",
+      "it = 51200 | reward 18.7\n",
+      "it = 102400 | reward 123.6\n",
+      "======= run = 9 / 20 =========\n",
+      "it = 0 | reward 37.4\n",
+      "it = 200 | reward 19.9\n",
+      "it = 400 | reward 13.1\n",
+      "it = 800 | reward 12.0\n",
+      "it = 1600 | reward 16.0\n",
+      "it = 3200 | reward 62.5\n",
+      "it = 6400 | reward 21.7\n",
+      "it = 12800 | reward 23.9\n",
+      "it = 25600 | reward 26.2\n",
+      "it = 51200 | reward 64.0\n",
+      "it = 102400 | reward 38.5\n",
+      "======= run = 10 / 20 =========\n",
+      "it = 0 | reward 39.0\n",
+      "it = 200 | reward 36.2\n",
+      "it = 400 | reward 21.3\n",
+      "it = 800 | reward 36.1\n",
+      "it = 1600 | reward 35.2\n",
+      "it = 3200 | reward 24.1\n",
+      "it = 6400 | reward 33.2\n",
+      "it = 12800 | reward 154.9\n",
+      "it = 25600 | reward 50.7\n",
+      "it = 51200 | reward 27.0\n",
+      "it = 102400 | reward 39.4\n",
+      "======= run = 11 / 20 =========\n",
+      "it = 0 | reward 18.7\n",
+      "it = 200 | reward 11.4\n",
+      "it = 400 | reward 12.4\n",
+      "it = 800 | reward 15.8\n",
+      "it = 1600 | reward 24.9\n",
+      "it = 3200 | reward 29.2\n",
+      "it = 6400 | reward 57.9\n",
+      "it = 12800 | reward 68.9\n",
+      "it = 25600 | reward 82.1\n",
+      "it = 51200 | reward 26.4\n",
+      "it = 102400 | reward 24.5\n",
+      "======= run = 12 / 20 =========\n",
+      "it = 0 | reward 10.6\n",
+      "it = 200 | reward 11.0\n",
+      "it = 400 | reward 14.0\n",
+      "it = 800 | reward 18.2\n",
+      "it = 1600 | reward 43.3\n",
+      "it = 3200 | reward 38.0\n",
+      "it = 6400 | reward 49.6\n",
+      "it = 12800 | reward 46.7\n",
+      "it = 25600 | reward 27.6\n",
+      "it = 51200 | reward 27.6\n",
+      "it = 102400 | reward 107.4\n",
+      "======= run = 13 / 20 =========\n",
+      "it = 0 | reward 11.0\n",
+      "it = 200 | reward 15.7\n",
+      "it = 400 | reward 21.4\n",
+      "it = 800 | reward 40.0\n",
+      "it = 1600 | reward 37.8\n",
+      "it = 3200 | reward 43.3\n",
+      "it = 6400 | reward 48.6\n",
+      "it = 12800 | reward 21.6\n",
+      "it = 25600 | reward 16.6\n",
+      "it = 51200 | reward 31.6\n",
+      "it = 102400 | reward 89.9\n",
+      "======= run = 14 / 20 =========\n",
+      "it = 0 | reward 22.3\n",
+      "it = 200 | reward 11.7\n",
+      "it = 400 | reward 11.5\n",
+      "it = 800 | reward 11.2\n",
+      "it = 1600 | reward 32.5\n",
+      "it = 3200 | reward 47.3\n",
+      "it = 6400 | reward 27.6\n",
+      "it = 12800 | reward 99.1\n",
+      "it = 25600 | reward 55.7\n"
      ]
     }
    ],
